<resources>
    <string name="app_name">TaskApp</string>

    <!--    Generics-->

    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_register_account">Criar conta</string>
    <string name="error_generic">Ocorreu um erro, tente novamente mais tarde</string>

    <!--    Login fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>

    <!--    Recover Account fragment-->
    <string name="text_brn_recover_account_fragment">Enviar</string>

    <!--    Erros Firebase Authentication-->

    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

<!--    Form task fragment-->
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_task_form_task_fragment">Tarefa</string>
    <string name="text_task_description_task_fragment">Descrição</string>
    <string name="text_status_form_task_fragment">Status</string>
    <string name="text_btn_save_task_form_task_fragment">Salvar</string>


</resources>

